[project]
name = "lib-ml-mellekoper"
version = "0.0.2"
authors = [
  { name="Melle Koper", email="melle.koper@gmail.com" },
]
description = "A small preprocessing package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/remla24-team7/lib-ml"
Issues = "https://github.com/remla24-team7/lib-ml/issues"