[tool.poetry]
name = "lib-ml"
version = "0.1.0"
description = "lib-ml"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
keras = "^3.3.3"
scikit-learn = "^1.4.2"

[tool.poetry.group.dev.dependencies]
tensorflow = "^2.16.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
